# nftables

./: .gitignore  Doxyfile  Makefile.am  configure.ac
doc/: nft.xml
files/examples/: sets_and_maps
files/nftables/: Makefile.am  ipv4-raw  ipv6-raw
include/: Makefile.am  cli.h  ct.h  datatype.h  erec.h  expression.h  exthdr.h  fib.h  gmputil.h  hash.h  iface.h  meta.h  mnl.h  netlink.h  nftables.h  nftables_common.h  numgen.h  parser.h  payload.h  proto.h  rt.h  rule.h  statement.h  tcpopt.h  utils.h  xt.h
include/linux/: Makefile.am
include/linux/netfilter/: Makefile.am  nf_conntrack_common.h  nf_tables.h  nfnetlink.h
include/linux/netfilter_arp/: Makefile.am
include/linux/netfilter_bridge/: Makefile.am
include/linux/netfilter_ipv4/: Makefile.am
include/linux/netfilter_ipv6/: Makefile.am
include/nftables/: Makefile.am  nftables.h
src/: Makefile.am  cli.c  ct.c  datatype.c  erec.c  evaluate.c  expression.c  exthdr.c  fib.c  gmputil.c  hash.c  iface.c  libnftables.c  main.c  mergesort.c  meta.c  mnl.c  netlink.c  netlink_delinearize.c  netlink_linearize.c  nftables_common.c  numgen.c  parser_bison.y  payload.c  proto.c  rt.c  rule.c  scanner.l  segtree.c  services.c  statement.c  tcpopt.c  utils.c  xt.c
tests/echo/: run-tests.sh
tests/echo/testcases/: simple.t
tests/files/: expr-rt
tests/monitor/: README  run-tests.sh
tests/monitor/testcases/: set-maps.t  set-mixed.t  set-multiple.t  set-simple.t  simple.t
tests/py/: README  nft-test.py
tests/py/any/: ct.t  ct.t.payload  dup.t  dup.t.payload  frag.t  fwd.t  fwd.t.payload  icmpX.t.netdev  limit.t  limit.t.payload  log.t  log.t.payload  meta.t  meta.t.payload  objects.t  queue.t  queue.t.payload  quota.t  quota.t.payload  rt.t  rt.t.payload
tests/py/arp/: arp.t  arp.t.payload  arp.t.payload.netdev  chains.t
tests/py/bridge/: chains.t  ether.t  ether.t.payload  icmpX.t  icmpX.t.payload  reject.t  reject.t.payload  vlan.t  vlan.t.payload  vlan.t.payload.netdev
tests/py/inet/: ah.t  ah.t.payload  ah.t.payload.inet  ah.t.payload.ip  ah.t.payload.ip6  ah.t.payload.netdev  comp.t  comp.t.payload  comp.t.payload.inet  comp.t.payload.ip  comp.t.payload.ip6  ct.t  ct.t.payload  dccp.t  dccp.t.payload  dccp.t.payload.inet  dccp.t.payload.ip  dccp.t.payload.ip6  dccp.t.payload.netdev  esp.t  esp.t.payload  esp.t.payload.inet  esp.t.payload.ip  esp.t.payload.ip6  ether-ip.t  ether-ip.t.payload.netdev  ether.t  ether.t.payload  ether.t.payload.ip  ether.t.payload.ip6  fib.t  fib.t.payload  icmpX.t  icmpX.t.payload  ip.t  ip.t.payload.bridge  ip.t.payload.inet  ip.t.payload.ip  ip.t.payload.netdev  map.t  (+34 more)
tests/py/ip/: ct.t  ct.t.payload  dnat.t  dnat.t.payload.ip  dup.t  dup.t.payload  flowtable.t  flowtable.t.payload  hash.t  hash.t.payload  icmp.t  icmp.t.payload.ip  ip.t  ip.t.payload  ip.t.payload.inet  ip.t.payload.netdev  ip_tcp.t  ip_tcp.t.payload  masquerade.t  masquerade.t.payload  numgen.t  numgen.t.payload  objects.t  objects.t.payload  redirect.t  redirect.t.payload  reject.t  reject.t.payload  rt.t  sets.t  sets.t.payload.inet  sets.t.payload.ip  sets.t.payload.netdev  snat.t  snat.t.payload  tcp.t.payload  tcpopt.t  tcpopt.t.payload
tests/py/ip6/: dnat.t  dnat.t.payload.ip6  dst.t  dst.t.payload.inet  dst.t.payload.ip6  dup.t  dup.t.payload  ether.t  exthdr.t.payload.ip6  flowtable.t  flowtable.t.payload  frag.t  frag.t.payload.inet  frag.t.payload.ip6  hbh.t  hbh.t.payload.inet  hbh.t.payload.ip6  icmpv6.t  icmpv6.t.payload.ip6  ip6.t  ip6.t.payload.inet  ip6.t.payload.ip6  map.t  map.t.payload  masquerade.t  masquerade.t.payload.ip6  mh.t  mh.t.payload.inet  mh.t.payload.ip6  redirect.t  redirect.t.payload.ip6  reject.t  reject.t.payload.ip6  rt.t  rt.t.payload.inet  rt.t.payload.ip6  rt0.t  sets.t  sets.t.payload.inet  sets.t.payload.ip6  (+9 more)
tests/regression/: nft-test.py
tests/regression/any/: ct.t  ct.t.payload  frag.t.payload  limit.t  limit.t.payload  meta.t  meta.t.payload  queue.t.payload
tests/regression/arp/: arp.t.payload
tests/regression/bridge/: ether.t  vlan.t  vlan.t.payload
tests/regression/inet/: comp.t  comp.t.payload.inet  comp.t.payload.ip  dccp.t.payload.ip6  esp.t  esp.t.payload.ip  esp.t.payload.ip6  ether.t.payload.bridge  ether.t.payload.ip  ether.t.payload.ip6  ip.t.payload.bridge  sctp.t.payload.ip  tcp.t  tcp.t.payload.inet  tcp.t.payload.ip  tcp.t.payload.ip6  udplite.t.payload.ip
tests/regression/ip/: dnat.t  dnat.t.payload.ip  dup.t  dup.t.payload  dup.t.payload.got  ether.t  ether.t.payload  icmp.t  icmp.t.payload.ip  ip.t  ip.t.payload  ip.t.payload.inet  masquerade.t  nat.t  redirect.t.payload  sets.t.payload.inet  sets.t.payload.ip  snat.t
tests/regression/ip6/: dnat.t  dst.t  dst.t.payload.ip6  dup.t  ether.t  ether.t.payload  hbh.t.payload.ip6  icmpv6.t  ip6.t  ip6.t.payload.inet  ip6.t.payload.ip6  mh.t.payload.inet  redirect.t  redirect.t.payload.ip6  reject.t.payload.ip6  sets.t.payload.inet  sets.t.payload.ip6  snat.t  snat.t.payload.ip6  vmap.t.payload.ip6
tests/shell/: README  run-tests.sh
tests/shell/testcases/cache/: 0002_interval_0
tests/shell/testcases/chains/: 0002jumps_1  0003jump_loop_1  0004busy_1  0005busy_map_1  0007masquerade_1  0008masquerade_jump_1  0009masquerade_jump_1  0010endless_jump_loop_1  0011endless_jump_loop_1  0012reject_in_prerouting_1
tests/shell/testcases/include/: 0002relative_0  0003includepath_0  0004endlessloop_1  0005dir_empty_0  0006dir_single_0  0007dir_double_0  0007glob_double_0  0008dir_no_slash_1  0009dir_nodir_1  0009glob_nofile_1  0010dir_broken_file_1  0010glob_broken_file_1  0011dir_dependency_0  0012dir_dependency_1  0012glob_dependency_1  0013input_descriptors_included_files_0
tests/shell/testcases/listing/: 0001ruleset_0  0002ruleset_0  0003table_0  0004table_0  0005ruleset_ip_0  0006ruleset_ip6_0  0007ruleset_inet_0  0008ruleset_arp_0  0009ruleset_bridge_0  0010sets_0  0011sets_0  0012sets_0
tests/shell/testcases/maps/: 0003map_add_many_elements_0  0004interval_map_create_once_0  0005interval_map_add_many_elements_0  0006interval_map_overlap_0  map_with_flags_0
(+64 files in other folders)
