SUBDIRS = linux

noinst_HEADERS = 	cli.h		\
			datatype.h	\
			expression.h	\
			mini-gmp.h	\
			gmputil.h	\
			iface.h		\
			mnl.h		\
			nftables.h	\
			payload.h	\
			rbtree.h	\
			statement.h	\
			ct.h		\
			erec.h		\
			exthdr.h	\
			headers.h	\
			list.h		\
			meta.h		\
			netlink.h	\
			parser.h	\
			proto.h		\
			rule.h		\
			utils.h
