SUBDIRS = linux nftables

noinst_HEADERS = 	cli.h		\
			datatype.h	\
			expression.h	\
			fib.h		\
			hash.h		\
			mini-gmp.h	\
			gmputil.h	\
			iface.h		\
			mnl.h		\
			nftables.h	\
			payload.h	\
			rbtree.h	\
			tcpopt.h	\
			statement.h	\
			ct.h		\
			erec.h		\
			exthdr.h	\
			headers.h	\
			list.h		\
			meta.h		\
			numgen.h	\
			netlink.h	\
			parser.h	\
			proto.h		\
			rule.h		\
			rt.h		\
			utils.h		\
			xt.h
